# xbrew

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  justfile
.github/workflows/: ci.yml  distro-smoke.yml  preview.yml  release.yml
docs/: PLATFORMS.md
recipes/: asar.toml  brew.toml  claude-code.toml  claude.toml  codex.toml  dbotter.toml  edge.toml  kakaotalk.toml  llmux-islands-preview.toml  llmux-islands.toml  nomachine.toml  orca.toml  rustdesk.toml  slack.toml  sunshine.toml  telegram.toml  z13ctl.toml
src/: main.rs  manifest.rs  platform.rs  recipe.rs  resolve.rs  state.rs  util.rs  version.rs
tests/: dbotter_arch_contract.rs
