[package]
name = "nobrew"
version = "0.1.1"
edition = "2021"
description = "One install/uninstall over brew, pacman, and recipes (macOS + Arch)."
license = "MIT"
repository = "https://github.com/2lab-ai/nobrew"

[[bin]]
name = "nobrew"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
