[package]
name = "xbrew"
version = "0.4.1"
edition = "2021"
description = "One install/uninstall over brew, pacman, and recipes (macOS + Arch)."
license = "MIT"
repository = "https://github.com/2lab-ai/xbrew"

[[bin]]
name = "xbrew"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
include_dir = "0.7"

[profile.release]
strip = true
opt-level = "z"
lto = true
